# tokei-dedup

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SKILL-search.md  SKILL.md
.github/workflows/: release.yml
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: html.rs  json_out.rs  main.rs
crates/cli/tests/: end_to_end_copy_paste.rs  end_to_end_function_mode.rs  end_to_end_real_corpus.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  search.rs
crates/fingerprinter/: Cargo.toml
crates/fingerprinter/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/lang-config/: Cargo.toml
crates/lang-config/src/: lib.rs
crates/lsp-server/: Cargo.toml
crates/lsp-server/src/: file_watcher.rs  main.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: lib.rs
crates/normalizer/tests/: cross_validate_with_tokei.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs
crates/slicer/: Cargo.toml
crates/slicer/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
docs/: M6-INCREMENTAL.md
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
scripts/: fetch-corpora.sh  install.sh
tests/fixtures/copy-paste-functions/: cli.py  server.py  util.py
tests/fixtures/copy-paste/a/: original.py
tests/fixtures/copy-paste/b/: clone_with_renames.py
tests/fixtures/copy-paste/c/: unrelated.py
tests/fixtures/multi-lang/: doc.md  hello.rs  mixed.js  nested.rs  simple.c  simple.go  strings.py
tests/fixtures/search-corpus/api/: response.py
tests/fixtures/search-corpus/services/: config.py
tests/fixtures/search-corpus/utils/: formatting.py  retry.py  validators.py
