[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/lang-config",
    "crates/normalizer",
    "crates/slicer",
    "crates/fingerprinter",
    "crates/index",
    "crates/verifier",
    "crates/classifier",
    "crates/semantic",
    "crates/cli",
    "crates/lsp-server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tpjg/tokei-dedup"
authors = ["tokei-dedup contributors"]

[workspace.dependencies]
tokei-dedup-core = { path = "crates/core", version = "0.0.1" }
tokei-dedup-lang-config = { path = "crates/lang-config", version = "0.0.1" }
tokei-dedup-normalizer = { path = "crates/normalizer", version = "0.0.1" }
tokei-dedup-fingerprinter = { path = "crates/fingerprinter", version = "0.0.1" }
tokei-dedup-index = { path = "crates/index", version = "0.0.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
