[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/lang-config",
    "crates/normalizer",
    "crates/slicer",
    "crates/fingerprinter",
    "crates/index",
    "crates/verifier",
    "crates/classifier",
    "crates/semantic",
    "crates/engine",
    "crates/cli",
    "crates/lsp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/tpjg/tokei-dedup"
authors = ["tokei-dedup contributors"]

[workspace.dependencies]
tokei-dedup-core = { path = "crates/core", version = "0.1.0" }
tokei-dedup-lang-config = { path = "crates/lang-config", version = "0.1.0" }
tokei-dedup-normalizer = { path = "crates/normalizer", version = "0.1.0" }
tokei-dedup-fingerprinter = { path = "crates/fingerprinter", version = "0.1.0" }
tokei-dedup-index = { path = "crates/index", version = "0.1.0" }
tokei-dedup-slicer = { path = "crates/slicer", version = "0.1.0" }
tokei-dedup-verifier = { path = "crates/verifier", version = "0.1.0" }
tokei-dedup-classifier = { path = "crates/classifier", version = "0.1.0" }
tokei-dedup-engine = { path = "crates/engine", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
ignore = "0.4"
rayon = "1"
clap = { version = "4", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }

[profile.release]
lto = "thin"
codegen-units = 1
