[package]
name = "tokei-dedup-fingerprinter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Token hashing, k-grams, and MOSS-style winnowing fingerprints"

[dependencies]
tokei-dedup-core = { workspace = true }
xxhash-rust = { workspace = true }
