[package]
name = "tokei-dedup-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Inverted-index over fingerprint hashes; reports candidate duplicate file pairs"

[dependencies]
tokei-dedup-fingerprinter = { workspace = true }
xxhash-rust = { workspace = true }
