[package]
name = "tokei-dedup-lsp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "tokei-dedup LSP server binary (stub — see DESIGN.md)"

[[bin]]
name = "dupe-lsp"
path = "src/main.rs"

[dependencies]
